kubernetes/cluster.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wordpress
  name: wordpress
spec:
  type: LoadBalancer #ClusterIP # LoadBalancer
  ports:
    - port:  80
      targetPort: 80
      protocol: TCP
  selector:
    app: wordpress
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - image: jjswain2018/wisdmlabs-nginx-php7.2-wordpress:v02
          name: wordpress
          ports:
            - containerPort: 80
              name: wordpress
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20 
          volumeMounts:
          - name: wordpress-persistent-storage
             # mountPath: /var/www/html
            mountPath: /usr/share/nginx/wwww 
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
            claimName: wordpress-volumeclaim
