kubernetes/prometheus-service.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
spec:
  selector: 
    app: prometheus-server
  type: LoadBalancer #NodePort
  ports:
    - port: 8080
      targetPort: 9090
      protocol: TCP 
      #nodePort: 30000

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   labels:
#     app: wordpress
#   name: wordpress
# spec:
#   type: LoadBalancer #ClusterIP # LoadBalancer
#   ports:
#     - port:  80
#       targetPort: 80
#       protocol: TCP
#   selector:
#     app: wordpress
