kubernetes/redis.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-connect 
  labels:
    app: redis
spec:
  type: ClusterIP
  ports:
    - port: 6379
  selector:
    app: redis
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis-connect
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - image: bitnami/redis:4.0.11
          name: redis
          ports:
            - containerPort: 6379
              name: redis
          readinessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 15
            periodSeconds: 20 
      #     volumeMounts:
      #       - name: mysql-persistent-storage
      #         mountPath: /var/lib/mysql
      #      #   mountPath: /usr/share/nginx/www
      # volumes:
      #   - name: mysql-persistent-storage
      #     persistentVolumeClaim:
      #        claimName: mysql-volumeclaim
