kubernetes/ingress.yml
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: "kubernetes-demo-app-ingress-service"
# spec:
#   rules:
#   - host: testwisdm.com #kubernetes-letsencrypt.jorge.fail # CHANGE ME!
#     http:
#       paths:
#       # The * is needed so that all traffic gets redirected to nginx
#       - path: /*
#         backend:
#           serviceName: wordpress 
#           servicePort: 80
# ---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "kubernetes-demo-app-ingress-service"
spec:
  tls:
  - hosts:
    - testwisdm.com # Your host. CHANGE ME
    secretName: letsencrypt-certs # Name of the secret
  rules:
  - http:
       paths:
       # The * is needed so that all traffic gets redirected to nginx
       - path: /*
         backend:
           serviceName: wordpress 
           servicePort: 80
